Change Log for OpenXava project
===============================

- New method validateViewValues() in ViewBaseAction.
- New WithRequiredLongName class for using as generic transient class for dialogs.
- Fix: show actions and subcontroller (controllers.xml) in order of appearance.
- Fix: if the module has 'ListOnly' or 'Void' mode-controller and neither has any action but it has defined a SubController, the SubController does not displayed.
- New method move() in XArrays utility class.
- New booleanWithSuffixEditor.jsp editor that allows put a suffix label after the field checkbox.
- Some new common use labels to be used in applications.
- New toString(Object [] array) method in Strings utility class.
- ModuleTestBase.setLocale() no longer reset the module.
- New selectListConfiguration(), assertListSelectedConfiguration() and assertListAllConfigurations() in ModuleTestBase.
- New method clearCondition() in ModuleTestBase to simulate clicking on the clear list condition button.
- Fix: Labels.getQualified(String id) does not return the qualified label.
- New method anyEqual() in Is utility class.
- New method naturalLabelToIdentifier() in Strings utility class.
- List remembers filters and ordering done by user to be re-executed choosing from a combo, you can rename the filter/ordering configurations produced.
- New indexExt.jsp in naviox/web to add elements to the main HTML page that wrap the application.
- New methods assertDiscussionCommentText(), assertDiscussionCommentsCount() and postDiscussionComment() in ModuleTestBase.
- Fix: On hover style for default action button does not work.
- Fix: Schema tool does not add schema for CREATE INDEX sentences.
- New DISCUSSION stereotype to include a discussion thread as a property of an entity.
- New SIMPLE_HTML_TEXT stereotype to edit rich text with a simplified user interface.
- Fix: Changes in custom.css lost when upgrading OpenXava version. 